--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -504,15 +504,16 @@
       <div class="container">
       <div class="row">        
         <div class="d-set-input">
-          <form action="https://clients.domgys.in/domainchecker.php?ext=.com" >                       
+          <form 
+          action="https://clients.domgys.in/domainchecker.php?ext=.com" >                       
           <input type="text" class="form-control" placeholder="Enter your domain name">         
-            <select class="form-select" aria-label="Default select example">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+            <select class="form-select">              
+              <option>.com</option>
+              <option>.net</option>
+              <option>.co.in</option>
+              <option>.in</option>
             </select>
-          <button class="  df-button"> Search</button>
+          <button class="df-button"> Search</button>
           </form>
         </div>
       </div>
