add faq and features

--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="https://domgys.in/register-a-domain.html">
 
-  <title>Buy Cheap Domain | Domain Registration | .in Domains - Domgys</title>
+  <title>Buy Cheap Domain | Domain Registration | .in Domains – Domgys</title>
 
   <link rel="shortcut icon" type="image/x-icon" href="./assets-registerDomain/img/favicon.png">
 
@@ -28,7 +28,7 @@
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <!-- typeed js -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script> -->
-  <meta name="keywords" content="">
+  <meta name="keywords" content="Domain Registration, buy a domain name, cheap domain, domain name registration, cheapest domain registration, free domain registration.">
   <meta name="description"
     content="Find the best deals on domain registration and purchase cheap .in domains on our website. Secure your online presence today!">
 
@@ -536,8 +536,8 @@
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-      <h2>Popular Features of </h2>
-      <p class="text-center">Thawte SSL Certificates<br></p>
+      <h2>Features of </h2>
+      <p class="text-center">Buy Cheap Domain<br></p>
     </div>
     <!-- End Section Title -->
 
@@ -548,9 +548,9 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="service-item item-cyan position-relative">
             <i class="bi bi-shield-check icon"></i>
-            <h3>Range of Validation Levels </h3>
-            <p>Thawte offers Domain Validation (DV), Organization Validation (OV), and Extended Validation (EV) SSL
-              certificates, providing varying levels of assurance and security depending on your needs. </p>
+            <h3>Affordable Pricing</h3>
+            <p>The primary feature of buying a cheap domain is cost-effectiveness. Many registrars offer competitive pricing for 
+              new domains, often with discounts on the first year or bulk purchases of multiple domains.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -558,9 +558,8 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="service-item item-orange position-relative">
             <i class="bi-hand-thumbs-up-fill icon"></i>
-            <h3>Global Trust and Recognition </h3>
-            <p>Thawte is one of the most globally recognized and trusted Certificate Authorities (CAs), offering
-              certificates that are trusted by millions of users worldwide.</p>
+            <h3>Domain Privacy Protection (WHOIS Privacy) </h3>
+            <p>This service hides your personal information (name, email, phone number, etc.) from the public WHOIS database, protecting your privacy and reducing the risk of spam.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -569,9 +568,9 @@
           <div class="service-item item-teal position-relative">
             <!-- <i class="bi bi-easel icon"></i> -->
             <i class="bi bi-check icon"></i>
-            <h3>Browser Compatibility</h3>
-            <p>Thawte SSL Certificates are compatible with all major web browsers, including Google Chrome, Mozilla
-              Firefox, Safari, Microsoft Edge, and others, ensuring seamless user experiences across platforms. </p>
+            <h3>Wide Range of Domain Extensions</h3>
+            <p>Cheap domain services often provide a variety of domain extensions, including popular ones like
+               <b>.com,</b> <b>.net,</b> <b>.org,</b> and even newer extensions like <b>.xyz,</b> <b>.online,</b> and <b>.store</b> at low rates. </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -579,10 +578,8 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
           <div class="service-item item-red position-relative">
             <i class="bi bi-tools icon"></i>
-            <h3>Warranty Coverage</h3>
-            <p>Thawte SSL Certificates come with generous warranties that provide financial protection against certain
-              types of losses due to a breach or failure of the SSL certificate, with coverage amounts varying by
-              certificate type. </p>
+            <h3>Domain Forwarding and Masking</h3>
+            <p>This allows you to redirect your domain visitors to another website. Masking keeps the original domain visible in the address bar even when the user is redirected to another URL. </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -590,9 +587,8 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
           <div class="service-item item-indigo position-relative">
             <i class="bi bi-bookmark-check-fill  icon"></i>
-            <h3>Thawte Trusted Site Seal</h3>
-            <p>Thawte provides a dynamic site seal that can be displayed on your website, reassuring visitors that their
-              data is secure and enhancing trust and credibility.
+            <h3>Custom Email Addresses</h3>
+            <p>Most domain registrars offer the ability to create custom email addresses using your domain name (e.g., yourname@yourdomain.com), giving a professional touch to your communications.
             </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
@@ -601,10 +597,8 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
           <div class="service-item item-pink position-relative">
             <i class="bi bi-bar-chart-steps icon"></i>
-            <h3>Fast Issue </h3>
-            <p>Thawte offers quick issuance times, particularly for DV certificates, which can often be issued within
-              minutes. OV and EV certificates take longer due to more extensive validation processes but are still
-              processed efficiently. </p>
+            <h3>Easy Domain Management </h3>
+            <p>A user-friendly control panel is provided to manage your domain settings, including DNS settings, name servers, and renewal options. Some services also offer bulk management tools.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -647,7 +641,7 @@
     <div class="row " data-aos="fade-up" data-aos-offset="200" data-aos-delay="70">
       <div class=" col-lg-12 col-sm-12  price_end">
         <div>
-          <h4>Thawte SSL Certificates FAQs</h4>
+          <h4>Domain FAQs</h4>
           <!-- <p>
                         Experience Seamless Management with Windows VPS Hosting Plans - Your Reliable Hosting Solution!
                     </p> -->
@@ -660,14 +654,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                   aria-expanded="true" aria-controls="collapseOne">
-                  1. What is a Thawte SSL Certificate?
+                  1.	How much does domain registration cost?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  A Thawte SSL Certificate is a digital certificate issued by Thawte, a trusted Certificate Authority
-                  (CA). It provides secure encryption for online communications and verifies the identity of
-                  websites to ensure safe browsing for users.
+                  Domain registration costs vary depending on the domain extension and the registrar. Common extensions like .com 
+                  often range from ₹ 299 to ₹899 per year, while newer or specialized extensions may be more expensive.
                 </div>
               </div>
             </div>
@@ -675,14 +668,14 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  2. What types of SSL Certificates does Thawte offer?
+                  2. Can I get a free domain name?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte offers several types of SSL Certificates, including Domain Validation (DV), Organization
-                  Validation (OV), and Extended Validation (EV) certificates. Each type provides a different level
-                  of validation and assurance.
+                  Some hosting providers offer free domain names with their hosting plans, but the domain is only free as long as
+                   you maintain the hosting subscription. Free domains may also be available with extensions like .tk, but they often
+                    have limitations.
                   <!-- <ul>
                                     <li>•	Domain Validation (DV) SSL Certificates</li>
                                     <li>•	Organization Validation (OV) SSL Certificates</li>
@@ -698,14 +691,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapseTwo">
-                  3. How does Thawte SSL Certificate validation work?
+                  3. What is WHOIS privacy protection?
                 </button>
               </h2>
               <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte SSL Certificate validation varies by type. DV certificates only require domain ownership
-                  verification. OV certificates require both domain ownership and organization verification. EV
-                  certificates require a thorough vetting process to ensure the highest level of trust and security
+                  WHOIS privacy protection (or domain privacy) is a service that hides your personal details (name, email, phone
+                   number) from the public WHOIS database, protecting you from spam and identity theft.
 
                   <!-- from phishing and man-in-the-middle attacks.
                                 <ul>
@@ -725,15 +717,14 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
-                  4. Can I use a Thawte SSL Certificate on multiple servers?
+                  4. What is a domain name?
 
                 </button>
               </h2>
               <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Yes, Thawte SSL Certificates can be used on multiple servers. Thawte also offers wildcard and
-                  multi-domain certificates, which allow you to secure multiple subdomains or domains with a single
-                  certificate.
+                  A domain name is a unique address used to identify a website on the internet (e.g., www.example.com). It typically
+                   consists of a name (example) and an extension (.com, .org, .net).
 
 
 
@@ -753,14 +744,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
-                  5. What is the Thawte Trusted Site Seal?
+                  5. How do I register a domain name?
                 </button>
               </h2>
               <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  The Thawte Trusted Site Seal is a visual indicator displayed on your website to show visitors that
-                  your site is secured with a Thawte SSL Certificate. This seal can enhance user trust and confidence
-                  in your website's security.
+                  Registration of a domain can be accomplished by accessing a domain registrar, doing a search for the desired name,
+                   and finalizing the purchase. Three well-known registrars are GoDaddy, Namecheap, and Google Domains.
                   <!-- <ul>
                                 <li>•	DV certificates can be issued within minutes.</li>
                                 <li>•	OV certificates typically take 1-3 days.</li>
@@ -781,9 +771,8 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Yes, Thawte SSL Certificates are compatible with all major web browsers and devices. They ensure
-                  secure connections across a wide range of platforms, providing seamless user experiences for your
-                  website visitors.
+                  Yes, most domain registrars allow you to transfer your domain to another registrar. However, there may be a
+                   transfer fee, and some registrars may restrict transfers within the first 60 days of registration.
 
                   <!-- DigiCert and GeoTrust both offer robust SSL Certificates with strong encryption. DigiCert is known
                                      for its rapid issuance, excellent customer support, and high assurance levels, while
@@ -809,16 +798,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
-                  7. What is the primary difference between Thawte and Sectigo SSL Certificates?
+                  7. Can I register more than one domain?
                 </button>
               </h2>
               <div id="collapse6" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte and <a href="https://domgys.in/Sectigo-SSL.html"> Sectigo SSL Certificate</a>
-                  both offer SSL certificates that provide encryption and
-                  authentication for websites. The primary difference lies in their brand reputation and specific
-                  offerings. Thawte is known for its strong global recognition and trust, while Sectigo, formerly
-                  Comodo, is known for its wide range of affordable and feature-rich SSL certificates.
+                  Yes, you can register multiple domains. Many businesses and individuals register multiple domains to protect 
+                  their brand, redirect traffic, or secure various extensions (e.g., .com, .net, .org).
 
 
 
