--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -504,16 +504,17 @@
       <div class="container">
       <div class="row">        
         <div class="d-set-input">
-          <form 
+          <h1 class="text-center py-5 mb-4 text-white">Find Your Perfect Domain</h1>
+          <form method="post"
           action="https://clients.domgys.in/domainchecker.php?ext=.com" >                       
-          <input type="text" class="form-control" placeholder="Enter your domain name">         
-            <select class="form-select">              
+          <input type="text" class="form-control" placeholder="Enter your domain name" required>         
+            <select class="form-select" required>              
               <option>.com</option>
               <option>.net</option>
               <option>.co.in</option>
               <option>.in</option>
             </select>
-          <button class="df-button"> Search</button>
+            <button class="df-button"> Search</button>
           </form>
         </div>
       </div>
