form and icons update with description

--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -538,8 +538,8 @@
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-      <h2>Popular Features of </h2>
-      <p class="text-center">Thawte SSL Certificates<br></p>
+      <p class="text-center">Add-ons with every Domain Name!<br></p>
+      <h2>Get over INR 5000 worth of free Service with every Domain you Register </h2>
     </div>
     <!-- End Section Title -->
 
@@ -549,20 +549,19 @@
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="service-item item-cyan position-relative">
-            <i class="bi bi-shield-check icon"></i>
-            <h3>Range of Validation Levels </h3>
-            <p>Thawte offers Domain Validation (DV), Organization Validation (OV), and Extended Validation (EV) SSL
-              certificates, providing varying levels of assurance and security depending on your needs. </p>
+            
+            <i class="bi bi-globe icon"></i>
+            <h3>Domain Forwarding </h3>
+            <p>Forward your domain to any other domain or URL at your finguretips, as per terms of company (with premium DNS service Only ) </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="service-item item-orange position-relative">
-            <i class="bi-hand-thumbs-up-fill icon"></i>
-            <h3>Global Trust and Recognition </h3>
-            <p>Thawte is one of the most globally recognized and trusted Certificate Authorities (CAs), offering
-              certificates that are trusted by millions of users worldwide.</p>
+            <i class="bi-person-fill-gear icon"></i>
+            <h3>DNS Management </h3>
+            <p>Manage and Control your Domain Name servers,Mx record,CName,IP address etc.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
