--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -767,13 +767,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  6. Are Thawte SSL Certificates compatible with all web browsers and devices?
+                  6. Can I transfer my domain to another registrar?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Yes, most domain registrars allow you to transfer your domain to another registrar. However, there may be a
-                   transfer fee, and some registrars may restrict transfers within the first 60 days of registration.
+                  Yes, most domain registrars allow you to transfer your domain to another registrar.
+                   However, there may be a transfer fee, and some registrars may restrict transfers within the first 60 days of registration.
 
                   <!-- DigiCert and GeoTrust both offer robust SSL Certificates with strong encryption. DigiCert is known
                                      for its rapid issuance, excellent customer support, and high assurance levels, while
