--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -671,12 +671,13 @@
 
   <!-- 30 days offer end -->
 
+  
   <!-- faq section -->
   <div class="container ">
     <div class="row " data-aos="fade-up" data-aos-offset="200" data-aos-delay="70">
       <div class=" col-lg-12 col-sm-12  price_end">
         <div>
-          <h4>Thawte SSL Certificates FAQs</h4>
+          <h4>Domain FAQs</h4>
           <!-- <p>
                         Experience Seamless Management with Windows VPS Hosting Plans - Your Reliable Hosting Solution!
                     </p> -->
@@ -689,14 +690,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                   aria-expanded="true" aria-controls="collapseOne">
-                  1. What is a Thawte SSL Certificate?
+                  1.	How much does domain registration cost?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  A Thawte SSL Certificate is a digital certificate issued by Thawte, a trusted Certificate Authority
-                  (CA). It provides secure encryption for online communications and verifies the identity of
-                  websites to ensure safe browsing for users.
+                  Domain registration costs vary depending on the domain extension and the registrar. Common extensions like .com 
+                  often range from ₹ 299 to ₹899 per year, while newer or specialized extensions may be more expensive.
                 </div>
               </div>
             </div>
@@ -704,14 +704,14 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  2. What types of SSL Certificates does Thawte offer?
+                  2. Can I get a free domain name?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte offers several types of SSL Certificates, including Domain Validation (DV), Organization
-                  Validation (OV), and Extended Validation (EV) certificates. Each type provides a different level
-                  of validation and assurance.
+                  Some hosting providers offer free domain names with their hosting plans, but the domain is only free as long as
+                   you maintain the hosting subscription. Free domains may also be available with extensions like .tk, but they often
+                    have limitations.
                   <!-- <ul>
                                     <li>•	Domain Validation (DV) SSL Certificates</li>
                                     <li>•	Organization Validation (OV) SSL Certificates</li>
@@ -727,14 +727,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapseTwo">
-                  3. How does Thawte SSL Certificate validation work?
+                  3. What is WHOIS privacy protection?
                 </button>
               </h2>
               <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte SSL Certificate validation varies by type. DV certificates only require domain ownership
-                  verification. OV certificates require both domain ownership and organization verification. EV
-                  certificates require a thorough vetting process to ensure the highest level of trust and security
+                  WHOIS privacy protection (or domain privacy) is a service that hides your personal details (name, email, phone
+                   number) from the public WHOIS database, protecting you from spam and identity theft.
 
                   <!-- from phishing and man-in-the-middle attacks.
                                 <ul>
@@ -754,15 +753,14 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
-                  4. Can I use a Thawte SSL Certificate on multiple servers?
+                  4. What is a domain name?
 
                 </button>
               </h2>
               <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Yes, Thawte SSL Certificates can be used on multiple servers. Thawte also offers wildcard and
-                  multi-domain certificates, which allow you to secure multiple subdomains or domains with a single
-                  certificate.
+                  A domain name is a unique address used to identify a website on the internet (e.g., www.example.com). It typically
+                   consists of a name (example) and an extension (.com, .org, .net).
 
 
 
@@ -782,14 +780,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
-                  5. What is the Thawte Trusted Site Seal?
+                  5. How do I register a domain name?
                 </button>
               </h2>
               <div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  The Thawte Trusted Site Seal is a visual indicator displayed on your website to show visitors that
-                  your site is secured with a Thawte SSL Certificate. This seal can enhance user trust and confidence
-                  in your website's security.
+                  Registration of a domain can be accomplished by accessing a domain registrar, doing a search for the desired name,
+                   and finalizing the purchase. Three well-known registrars are GoDaddy, Namecheap, and Google Domains.
                   <!-- <ul>
                                 <li>•	DV certificates can be issued within minutes.</li>
                                 <li>•	OV certificates typically take 1-3 days.</li>
@@ -805,14 +802,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  6. Are Thawte SSL Certificates compatible with all web browsers and devices?
+                  6. Can I transfer my domain to another registrar?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Yes, Thawte SSL Certificates are compatible with all major web browsers and devices. They ensure
-                  secure connections across a wide range of platforms, providing seamless user experiences for your
-                  website visitors.
+                  Yes, most domain registrars allow you to transfer your domain to another registrar.
+                   However, there may be a transfer fee, and some registrars may restrict transfers within the first 60 days of registration.
 
                   <!-- DigiCert and GeoTrust both offer robust SSL Certificates with strong encryption. DigiCert is known
                                      for its rapid issuance, excellent customer support, and high assurance levels, while
@@ -838,16 +834,13 @@
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
-                  7. What is the primary difference between Thawte and Sectigo SSL Certificates?
+                  7. Can I register more than one domain?
                 </button>
               </h2>
               <div id="collapse6" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Thawte and <a href="https://domgys.in/Sectigo-SSL.html"> Sectigo SSL Certificate</a>
-                  both offer SSL certificates that provide encryption and
-                  authentication for websites. The primary difference lies in their brand reputation and specific
-                  offerings. Thawte is known for its strong global recognition and trust, while Sectigo, formerly
-                  Comodo, is known for its wide range of affordable and feature-rich SSL certificates.
+                  Yes, you can register multiple domains. Many businesses and individuals register multiple domains to protect 
+                  their brand, redirect traffic, or secure various extensions (e.g., .com, .net, .org).
 
 
 
