--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -567,12 +567,14 @@
   <!-- ========= Technical Features Section End ========= -->
 
   <!-- Services Section -->
+ 
+  <!-- Services Section -->
   <section id="services" class="services section">
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-      <p class="text-center">Add-ons with every Domain Name!<br></p>
-      <h2>Get over INR 5000 worth of free Service with every Domain you Register </h2>
+      <h2>Features of </h2>
+      <p class="text-center">Buy Cheap Domain<br></p>
     </div>
     <!-- End Section Title -->
 
@@ -582,19 +584,19 @@
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="service-item item-cyan position-relative">
-            
-            <i class="bi bi-globe icon"></i>
-            <h3>Domain Forwarding </h3>
-            <p>Forward your domain to any other domain or URL at your finguretips, as per terms of company (with premium DNS service Only ) </p>
+            <i class="bi bi-shield-check icon"></i>
+            <h3>Affordable Pricing</h3>
+            <p>The primary feature of buying a cheap domain is cost-effectiveness. Many registrars offer competitive pricing for 
+              new domains, often with discounts on the first year or bulk purchases of multiple domains.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="service-item item-orange position-relative">
-            <i class="bi-person-fill-gear icon"></i>
-            <h3>DNS Management </h3>
-            <p>Manage and Control your Domain Name servers,Mx record,CName,IP address etc.</p>
+            <i class="bi-hand-thumbs-up-fill icon"></i>
+            <h3>Domain Privacy Protection (WHOIS Privacy) </h3>
+            <p>This service hides your personal information (name, email, phone number, etc.) from the public WHOIS database, protecting your privacy and reducing the risk of spam.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
@@ -602,28 +604,28 @@
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="service-item item-teal position-relative">
             <!-- <i class="bi bi-easel icon"></i> -->
-            <i class="bi bi-sign-turn-slight-right-fill icon"></i>
-            <h3>Domain Transfer</h3>
-            <p>Domain transfer option is available </p>
+            <i class="bi bi-check icon"></i>
+            <h3>Wide Range of Domain Extensions</h3>
+            <p>Cheap domain services often provide a variety of domain extensions, including popular ones like
+               <b>.com,</b> <b>.net,</b> <b>.org,</b> and even newer extensions like <b>.xyz,</b> <b>.online,</b> and <b>.store</b> at low rates. </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
           <div class="service-item item-red position-relative">
-            <i class="bi bi-bookmark-check-fill  icon"></i>
-            
-            <h3>Easy to use Control Panel</h3>
-            <p>Manage yuor Domain, DNS,transfer options, all at one place </p>
+            <i class="bi bi-tools icon"></i>
+            <h3>Domain Forwarding and Masking</h3>
+            <p>This allows you to redirect your domain visitors to another website. Masking keeps the original domain visible in the address bar even when the user is redirected to another URL. </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
           <div class="service-item item-indigo position-relative">
-          <i class="bi bi-tools icon"></i>
-            <h3>Bulk Tools</h3>
-            <p>Bulk registration, Bulk Transfer and Bulk email Migration tools available as per terms of company.
+            <i class="bi bi-bookmark-check-fill  icon"></i>
+            <h3>Custom Email Addresses</h3>
+            <p>Most domain registrars offer the ability to create custom email addresses using your domain name (e.g., yourname@yourdomain.com), giving a professional touch to your communications.
             </p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
@@ -631,9 +633,9 @@
 
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
           <div class="service-item item-pink position-relative">
-            <i class="bi bi-chat-left-dots-fill icon"></i>
-            <h3>24/7 Support </h3>
-            <p>Best in class support syste, via email, Calls and Ticketing system </p>
+            <i class="bi bi-bar-chart-steps icon"></i>
+            <h3>Easy Domain Management </h3>
+            <p>A user-friendly control panel is provided to manage your domain settings, including DNS settings, name servers, and renewal options. Some services also offer bulk management tools.</p>
             <!-- <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
           </div>
         </div><!-- End Service Item -->
