--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -17,6 +17,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
+
   <link rel="stylesheet" href="./assets-registerDomain/css/style.css" />
   <!-- <link rel="stylesheet" href="./assets-registerDomain/css/responsive.css" /> -->
   <link rel="stylesheet" href="./assets-registerDomain/css/Cards.css">
@@ -25,7 +28,6 @@
   <link rel="stylesheet" href="./assets-registerDomain/scss/main.css">
 
 
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <!-- typeed js -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script> -->
   <meta name="keywords" content="">
@@ -1018,10 +1020,13 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets-registerDomain/js/app.js"></script>
-
-
+  
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="./assets-registerDomain/js/app.js"></script>
+  <script src="./assets-registerDomain/js/lenis.js"></script>
+
+
   <script>
     document.querySelector('.year').innerHTML = new Date().getFullYear()
     document.addEventListener('DOMContentLoaded', function () {
