--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -16,7 +16,8 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <!-- Lenis CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
   <link rel="stylesheet" href="./assets-registerDomain/css/style.css" />
   <!-- <link rel="stylesheet" href="./assets-registerDomain/css/responsive.css" /> -->
   <link rel="stylesheet" href="./assets-registerDomain/css/Cards.css">
@@ -1017,9 +1018,13 @@
 
 
 
+  
+  <!-- Lenis JS -->
+   <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./assets-registerDomain/js/app.js"></script>
-
+  <script src="./assets-registerDomain/js/smooth-scroll.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>
