--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -558,7 +558,6 @@
               <div class="item" style="--c:5; --r:7"><img src="./assets-registerDomain/img/domain/ORG Domain.png" alt=""></div>  
               <div class="item" style="--c:5 --r:10; "><img src="./assets-registerDomain/img/domain/shop.png" alt=""></div>  
               
-               
           </div>
       </div>
   </div>
@@ -1037,7 +1036,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./assets-registerDomain/js/app.js"></script>
-  <script src="./assets-registerDomain/js/lenis.js"></script>
+  <!-- <script src="./assets-registerDomain/js/lenis.js"></script> -->
 
 
   <script>
