--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -522,7 +522,7 @@
       </div>
   </div>    
   </div>
-  <div class="container">
+  <div class="container logo-hide_button">
     <div class="row main_logo">
         <!-- <div class="slider" style="
           --width: 180px;
@@ -548,15 +548,15 @@
       <div class="box-model">
         <div class="models">
               <div class="item" style="--c:1; --r:8"><img src="./assets-registerDomain/img/domain/in.png" alt=""></div>
-              <div class="item" style="--c:1; --r:5"><img src="./assets-registerDomain/img/domain/Biz domain.jpg" alt=""></div>
-              <div class="item" style="--c:2; --r:9"><img src="./assets-registerDomain/img/domain/club.png" alt=""></div>
-              <div class="item" style="--c:2; --r:4"><img src="./assets-registerDomain/img/domain/aidotcom.jpeg" alt=""></div>
-              <div class="item" style="--c:3; --r:2"><img src="./assets-registerDomain/img/domain/us domain.jpg" alt=""></div> 
-              <div class="item" style="--c:3; --r:6"><img src="./assets-registerDomain/img/domain/download (1).png" alt=""></div>  
-              <div class="item" style="--c:4; --r:3"><img src="./assets-registerDomain/img/domain/Co domain.png" alt=""></div>  
-              <div class="item" style="--c:4; --r:1"><img src="./assets-registerDomain/img/domain/info.png" alt=""></div>  
-              <div class="item" style="--c:5; --r:7"><img src="./assets-registerDomain/img/domain/ORG Domain.png" alt=""></div>  
-              <div class="item" style="--c:5 --r:10; "><img src="./assets-registerDomain/img/domain/shop.png" alt=""></div>  
+              <div class="item" style="--c:2; --r:5"><img src="./assets-registerDomain/img/domain/Biz domain.jpg" alt=""></div>
+              <div class="item" style="--c:3; --r:9"><img src="./assets-registerDomain/img/domain/club.png" alt=""></div>
+              <div class="item" style="--c:4; --r:4"><img src="./assets-registerDomain/img/domain/aidotcom.jpeg" alt=""></div>
+              <div class="item" style="--c:5; --r:2"><img src="./assets-registerDomain/img/domain/us domain.jpg" alt=""></div> 
+              <div class="item" style="--c:6; --r:6"><img src="./assets-registerDomain/img/domain/download (1).png" alt=""></div>  
+              <div class="item" style="--c:7; --r:3"><img src="./assets-registerDomain/img/domain/Co domain.png" alt=""></div>  
+              <div class="item" style="--c:8; --r:1"><img src="./assets-registerDomain/img/domain/info.png" alt=""></div>  
+              <div class="item" style="--c:9; --r:7"><img src="./assets-registerDomain/img/domain/ORG Domain.png" alt=""></div>  
+              <div class="item" style="--c:10; --r:10"><img src="./assets-registerDomain/img/domain/shop.png" alt=""></div>  
               
           </div>
       </div>
