--- a/register-a-domain.html
+++ b/register-a-domain.html
@@ -544,9 +544,9 @@
           </div>
         </div> -->
       </div>
-      
-      <div class="box-model">
-        <div class="models">
+  </div>
+  <div class="box-model">
+        <div class="models" style="--qty: 10; --width: 150px">
               <div class="item" style="--c:1; --r:8"><img src="./assets-registerDomain/img/domain/in.png" alt=""></div>
               <div class="item" style="--c:2; --r:5"><img src="./assets-registerDomain/img/domain/Biz domain.jpg" alt=""></div>
               <div class="item" style="--c:3; --r:9"><img src="./assets-registerDomain/img/domain/club.png" alt=""></div>
@@ -560,8 +560,7 @@
               
           </div>
       </div>
-  </div>
-   
+    </div>
   <!-- <div class="container-fluid"> 
       <div class="row py-3">
       <div class="w-100">
